...
    
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/signup_error_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...
    
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/signup_name_text_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                                android:orientation="horizontal">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/signup_name_editext"
                                    android:hint="@string/name"
                                    android:textSize="@dimen/textsize_small"
...
    
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/signup_phone_text_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                                android:orientation="horizontal">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/signup_phone_editext"
                                    android:hint="@string/phone"
                                    android:textSize="@dimen/textsize_small"
...
    
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/signup_email_text_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                                android:orientation="horizontal">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/signup_email_editext"
                                    android:hint="@string/email"
                                    android:textSize="@dimen/textsize_small"
...
    
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/signup_password_text_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                                app:passwordToggleEnabled="true">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/signup_password_editext"
                                    android:hint="@string/password"
                                    android:textSize="@dimen/textsize_small"
...
    
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/signup_confirm_password_text_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
                                app:passwordToggleEnabled="true">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/signup_confirm_password_editext"
                                    android:hint="@string/confirm_password"
                                    android:textSize="@dimen/textsize_small"
...
    
                                <Button
                                    android:id="@+id/signup_button"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/button_normal_size"
...
